[package]
name = "brightness"
version = "0.1.0"
edition = "2024"
description = "CLI to control display brightness on macOS via DisplayServices"
repository = "https://github.com/atahanyorganci/brightness-cli"
license = "MIT"
keywords = ["brightness", "display", "macos", "cli"]
categories = ["command-line-utilities"]
authors = ["atahanyorganci <atahanyorganci@hotmail.com>"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }

[build-dependencies]
bindgen = "0.70"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
